--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-provide",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "a babel provide that like webpack-provide-plugin",
   "keywords": [
     "babel",
@@ -8,6 +8,7 @@
     "provide"
   ],
   "sideEffects": false,
+  "main": "src/index.js",
   "module": "esm/index.js",
   "engines": {
     "node": "> 6.9.1"
